--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林), server: 213.183.53.208, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇯🇵 日本-1.38MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-1.48MB/s(Youtube:不良林), server: 85.208.108.93, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-155.2KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-267.1KB/s(Youtube:不良林), server: 38.114.114.19, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.114.114.49, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.30MB/s(Youtube:不良林), server: 38.143.66.99, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 38.68.134.85, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-907.6KB/s(Youtube:不良林), server: 38.86.135.27, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇺🇸 美国-497.6KB/s(Youtube:不良林), server: 38.114.114.19, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 38.114.114.49, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2, server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-155.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-497.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-155.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-497.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-155.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-497.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-155.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-497.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-155.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-497.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-155.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-497.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-155.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-497.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
