--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-267.1KB/s(Youtube:不良林), server: 38.114.114.19, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.114.114.49, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.30MB/s(Youtube:不良林), server: 38.143.66.99, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 38.68.134.85, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-907.6KB/s(Youtube:不良林), server: 38.86.135.27, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-497.6KB/s(Youtube:不良林), server: 38.114.114.19, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 38.114.114.49, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-2.34MB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-481.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 38.64.138.145, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇯🇵 日本-1.48MB/s(Youtube:不良林), server: 85.208.108.93, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1012.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-714.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.09MB/s(Youtube:不良林), server: 116.129.254.192, port: 16206, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.98MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇫🇷 法国-1.02MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-267.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-497.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1012.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-267.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-497.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1012.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-267.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-497.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1012.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-267.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-497.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1012.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-267.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-497.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1012.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-267.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-497.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1012.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-267.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1012.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-497.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-481.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1012.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-714.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
